# open-sound-grid

./: .gitattributes  .gitignore  CLAUDE.md  CODE_REVIEW.md  CONTRACTS.md  Cargo.toml  LICENSE  LICENSE.md  Makefile  PKGBUILD  README.md  clippy.toml
.claude-octopus/: state.json
.github/workflows/: ci.yml  release.yml
.grepai/: config.yaml  symbols.gob
assets/: open-sound-grid.desktop
crates/osg-core/: Cargo.toml
crates/osg-core/src/: commands.rs  config.rs  core.rs  events.rs  lib.rs  migration.rs  traits.rs
crates/osg-core/src/graph/: channel.rs  effects_config.rs  endpoint.rs  eq_config.rs  events.rs  identifiers.rs  link.rs  mod.rs  node_identity.rs  port_kind.rs  runtime.rs  serde_helpers.rs  session.rs  types.rs  undo.rs  utils.rs  volume_state.rs
crates/osg-core/src/pw/: audio_graph.rs  biquad.rs  cell.rs  effects_dsp.rs  error.rs  fft.rs  filter.rs  filter_chain.rs  filter_store.rs  group_nodes.rs  identifier.rs  mainloop.rs  master.rs  messages.rs  mod.rs  object.rs  peak.rs  pod.rs  port_mapper.rs  store.rs  volume_ops.rs
crates/osg-core/src/pw/filter/: filter_handle.rs  mod.rs  process.rs
crates/osg-core/src/routing/: app_handler.rs  apps.rs  cell_reconcile.rs  endpoint_handler.rs  eq_handler.rs  eq_handlers.rs  event_translator.rs  filter_lifecycle.rs  handler.rs  handler_registry.rs  helpers.rs  link_handler.rs  messages.rs  mod.rs  order_handler.rs  output_handler.rs  reconcile.rs  reducer.rs  update.rs  volume_handler.rs
crates/osg-core/src/routing/reconcile/: diff_links.rs  diff_nodes.rs  diff_properties.rs  helpers.rs  mod.rs  resolve_endpoint.rs
crates/osg-core/src/traits/: graph_observer.rs  mod.rs  routing_service.rs  volume_service.rs
crates/osg-core/tests/: biquad_test.rs  config_test.rs  eq_config_test.rs  event_translator_test.rs  fft_test.rs  filter_test.rs  handler_registry_test.rs  link_constructor_test.rs  mixer_event_test.rs  pod_test.rs  port_mapping_test.rs  reconcile_test.rs  service_traits_test.rs  undo_test.rs  volume_test.rs  wire_format_test.rs
crates/osg-server/: Cargo.toml
crates/osg-server/src/: icons.rs  main.rs  spectrum.rs
crates/osg-server/tests/: spectrum_message_test.rs
poc/: Cargo.toml  PKGBUILD
poc/assets/: open-sound-grid.desktop
poc/planning/: 2026-03-29-v099-remaining.md  BUILD-RESULTS.md
poc/src/: config.rs  error.rs  hotkeys.rs  tray.rs
poc/src/app/: messages.rs  persistence.rs  state.rs  subscriptions.rs  update.rs
poc/src/app/handlers/: effects.rs  keyboard.rs  (+5 more)
poc/src/engine/: state.rs
poc/src/plugin/: mod.rs
poc/src/plugins/: mod.rs
poc/src/ui/: effects_panel.rs  sidebar.rs  theme.rs  vu_meter.rs
poc/tests/snapshots/: channel_dropdown-wgpu.sha256  channel_settings-wgpu.sha256  channel_settings_apps-wgpu.sha256  empty_matrix-wgpu.sha256  full_app_light-wgpu.sha256  j01_first_launch-wgpu.sha256  j02_gaming-wgpu.sha256  j03_streamer-wgpu.sha256  j05_podcast-wgpu.sha256  j06_work-wgpu.sha256  j08_channel_creation-wgpu.sha256  j09_effects-wgpu.sha256  j10_compact_view-wgpu.sha256  persona_casual_dark-wgpu.sha256  persona_casual_light-wgpu.sha256  persona_gamer_dark-wgpu.sha256  persona_streamer_dark-wgpu.sha256  persona_worker_dark-wgpu.sha256  volume_percentage-wgpu.sha256
scripts/: lint-standards.sh
src/: app.rs  autostart.rs  config.rs  effects.rs  error.rs  hotkeys.rs  lib.rs  main.rs  notifications.rs  presets.rs  resolve.rs  sound_check.rs  tray.rs
src/app/: messages.rs  mod.rs  persistence.rs  state.rs  update.rs  view.rs  view_header.rs
src/app/handlers/: app_routing.rs  channels.rs  device.rs  matrix.rs  plugin_events.rs  presets.rs  state_refresh.rs  state_restore.rs  tray.rs
src/audio/: bridge.rs  mod.rs  pulse.rs  types.rs
src/engine/: mod.rs  state.rs
src/plugin/: api.rs  manager.rs  mod.rs
src/plugins/: mod.rs
src/plugins/pipewire/: connection.rs  mod.rs  nodes.rs
src/plugins/pulseaudio/: apps.rs  connection.rs  devices.rs  effects_handler.rs  introspect.rs  introspect_control.rs  lifecycle.rs  mod.rs  modules.rs  peaks.rs  routing.rs  snapshots.rs  volume.rs
src/ui/: app_list.rs  audio_slider.rs  channel_settings.rs  effects_panel.rs  eq_widget.rs  matrix.rs  mod.rs  sidebar.rs  theme.rs  vu_meter.rs  vu_slider.rs
src/ui/matrix/: cell.rs  channel_label.rs  channel_picker.rs  grid.rs  mix_header.rs
tests/: journey_tests.rs  ui_tests.rs
web/: eslint.config.mjs  index.html  package-lock.json  package.json  vite.config.ts  vitest.config.ts
web/.omc/state/: idle-notif-cooldown.json
web/src/: App.tsx  index.css  types.ts
web/src/components/: AppAssignment.tsx  AppIcon.test.tsx  AppIcon.tsx  AppList.tsx  ChannelCreator.test.tsx  ChannelCreator.tsx  ChannelLabel.test.tsx  ChannelLabel.tsx  ChannelList.tsx  CompactMode.tsx  ContextMenu.tsx  DragReorder.tsx  EmptyState.tsx  EndpointRow.tsx  EqThumbnail.tsx  LinkList.tsx  MatrixCell.test.tsx  MatrixCell.tsx  MeterSlider.test.tsx  MeterSlider.tsx  MixCreator.tsx  MixEffectsRow.test.tsx  MixEffectsRow.tsx  MixHeader.test.tsx  MixHeader.tsx  Mixer.test.tsx  Mixer.tsx  MixerPanel.tsx  NodeList.tsx  SettingsPanel.tsx  Sidebar.test.tsx  Sidebar.tsx  VolumeSlider.tsx  VuMeter.tsx  VuSlider.test.tsx  VuSlider.tsx  WelcomeWizard.test.tsx  WelcomeWizard.tsx  mixerUtils.test.ts  mixerUtils.ts  (+2 more)
web/src/eq/: EffectsBlock.tsx  EqBandPopup.tsx  EqDemo.tsx  EqGraph.tsx  EqMacroSliders.tsx  EqPage.tsx  EqPanel.tsx  EqPresetManager.tsx  PresetGallery.tsx  PresetSaveDialog.tsx  bandColors.ts  effectDefinitions.ts  math.ts  monitorLogic.test.ts  monitorLogic.ts  presets.ts  useEqState.ts
web/src/hooks/: useMixerViewModel.test.ts  useMixerViewModel.ts  useMonitorOrchestration.ts  useSmoothedPeak.ts  useVisibility.test.ts  useVolumeDebounce.ts
web/src/spectrum/: AnalyzerPage.tsx  SpectrumAnalyzer.test.tsx  SpectrumAnalyzer.tsx  spectrumStore.test.ts  spectrumStore.ts
web/src/stores/: backoff.ts  graphStore.tsx  levelsStore.tsx  mixerSettings.tsx  monitorStore.tsx  sessionStore.test.ts  sessionStore.tsx
web/src/types/: commands.ts  effects.ts  eq.ts  graph.ts  index.ts  session.ts
web/tokens/: tokens.json
(+17 files in other folders)
