[workspace]
resolver = "2"
members = ["crates/osg-core", "crates/osg-server"]

[workspace.package]
edition = "2024"
license = "MPL-2.0"
repository = "https://github.com/moabualruz/open-sound-grid"

[workspace.dependencies]
# Async
tokio = { version = "1.50", features = ["rt-multi-thread", "macros", "sync", "time", "process", "io-util"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "1.1"

# Error handling
thiserror = "2.0"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# PipeWire
pipewire = "0.9"

# Collections
indexmap = { version = "2.13", features = ["serde"] }
slotmap = { version = "1.1", features = ["serde"] }
itertools = "0.14"
ulid = { version = "1.2", features = ["serde"] }

# Channels
oneshot = "0.1"

# System
dirs = "6.0"

# Web server (osg-server only)
axum = "0.8"
tower = "0.5"
tower-http = { version = "0.6", features = ["fs", "cors"] }
tokio-tungstenite = "0.29"
