[workspace]
resolver = "2"
members = ["crates/osg-core", "crates/osg-server"]

[workspace.package]
edition = "2024"
license = "MPL-2.0"
repository = "https://github.com/moabualruz/open-sound-grid"

# ADR-005 coding standards enforced via clippy lints
[workspace.lints.rust]
unsafe_code = "deny"
unused_must_use = "deny"
missing_debug_implementations = "warn"

[workspace.lints.clippy]
# SOLID: small functions, few parameters
too_many_arguments = "warn"
too_many_lines = "warn"
cognitive_complexity = "warn"
# Immutability: prefer &T over &mut T
needless_pass_by_ref_mut = "warn"
# Code quality
unwrap_used = "warn"
expect_used = "warn"
panic = "warn"
todo = "warn"
dbg_macro = "deny"
print_stdout = "deny"
print_stderr = "deny"
# Dead code
unused_self = "warn"
# Error handling: no string errors
manual_let_else = "warn"

[workspace.dependencies]
# Async
tokio = { version = "1.50", features = ["rt-multi-thread", "macros", "sync", "time", "process", "io-util"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "1.1"

# Error handling
thiserror = "2.0"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# PipeWire
pipewire = "0.9"

# Collections
indexmap = { version = "2.13", features = ["serde"] }
slotmap = { version = "1.1", features = ["serde"] }
itertools = "0.14"
ulid = { version = "1.2", features = ["serde"] }

# Channels
oneshot = "0.1"

# System
dirs = "6.0"

# Web server (osg-server only)
axum = { version = "0.8", features = ["ws"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["fs", "cors"] }
tokio-tungstenite = "0.29"
