[package]
name = "osg-core"
version = "0.1.0"
description = "PipeWire orchestration core for Open Sound Grid"
edition.workspace = true
license.workspace = true
repository.workspace = true

[lints]
workspace = true

[dependencies]
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
toml = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
pipewire = { workspace = true }
indexmap = { workspace = true }
slotmap = { workspace = true }
itertools = { workspace = true }
ulid = { workspace = true }
oneshot = { workspace = true }
dirs = { workspace = true }
arc-swap = "1.9.0"
pipewire-sys = "0.9"
libspa-sys = "0.9"
realfft = { workspace = true }
