[package]
name = "osg-server"
version = "0.1.0"
description = "WebSocket server for Open Sound Grid web UI"
edition.workspace = true
license.workspace = true
repository.workspace = true

[lints]
workspace = true

[dependencies]
osg-core = { path = "../osg-core" }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
axum = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }
tokio-tungstenite = { workspace = true }
dirs = { workspace = true }

[dev-dependencies]
tempfile = "3"
